--- a/app/src/main/res/layout/item_actor_cast_movie_recycler_view.xml
+++ b/app/src/main/res/layout/item_actor_cast_movie_recycler_view.xml
@@ -11,9 +11,9 @@
         android:id="@+id/castMovieTitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
+        android:layout_margin="@dimen/margin_4dp"
         android:textColor="@color/white"
-        android:textSize="12sp"
+        android:textSize="@dimen/cast_item_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,9 +23,9 @@
         android:id="@+id/castMovieYearTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
+        android:layout_margin="@dimen/margin_4dp"
         android:textColor="@color/white"
-        android:textSize="12sp"
+        android:textSize="@dimen/cast_item_text_size"
         app:layout_constraintBottom_toBottomOf="@+id/castMovieTitleTextView"
         app:layout_constraintStart_toEndOf="@+id/castMovieTitleTextView"
         app:layout_constraintTop_toTopOf="@+id/castMovieTitleTextView"
@@ -35,10 +35,10 @@
         android:id="@+id/slash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
+        android:layout_margin="@dimen/margin_4dp"
         android:text="@string/slash"
         android:textColor="@color/white"
-        android:textSize="12sp"
+        android:textSize="@dimen/cast_item_text_size"
         app:layout_constraintBottom_toBottomOf="@+id/castMovieYearTextView"
         app:layout_constraintStart_toEndOf="@id/castMovieYearTextView"
         app:layout_constraintTop_toTopOf="@+id/castMovieTitleTextView" />
@@ -47,12 +47,12 @@
         android:id="@+id/castMovieRoleTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
+        android:layout_margin="@dimen/margin_4dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:singleLine="true"
         android:textColor="@color/white"
-        android:textSize="11sp"
+        android:textSize="@dimen/cast_item_text_size"
         app:layout_constraintBottom_toBottomOf="@+id/castMovieYearTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/slash"
