--- a/app/src/main/res/layout/item_actor_known_for_recycler_view.xml
+++ b/app/src/main/res/layout/item_actor_known_for_recycler_view.xml
@@ -2,8 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="130dp"
-    android:layout_height="180dp"
+    android:layout_width="@dimen/item_know_for_width"
+    android:layout_height="@dimen/item_know_for_height"
     android:layout_marginStart="@dimen/cardview_start"
     android:layout_marginTop="@dimen/card_view_margin_top"
     android:layout_marginEnd="@dimen/cardview_end_actor"
