--- a/app/src/main/res/layout/item_now_in_theatre_recycler_view.xml
+++ b/app/src/main/res/layout/item_now_in_theatre_recycler_view.xml
@@ -16,8 +16,8 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/moviePosterImageView"
-            android:layout_width="140dp"
-            android:layout_height="200dp"
+            android:layout_width="@dimen/item_in_theatre_pic_width"
+            android:layout_height="@dimen/item_in_theatre_pic_height"
             android:adjustViewBounds="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
