--- a/app/src/main/res/layout/item_saved_movie.xml
+++ b/app/src/main/res/layout/item_saved_movie.xml
@@ -18,8 +18,8 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/moviePosterImageView"
-            android:layout_width="140dp"
-            android:layout_height="200dp"
+            android:layout_width="@dimen/item_saved_pic_width"
+            android:layout_height="@dimen/item_saved_pic_height"
             android:adjustViewBounds="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -32,7 +32,7 @@
             android:padding="@dimen/padding_4dp"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="14sp"
+            android:textSize="@dimen/item_saved_title_text_size"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/moviePosterImageView"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,9 +43,9 @@
             android:id="@+id/movieRatingTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/margin_8dp"
             android:background="@drawable/rounded_shape"
-            android:padding="8dp"
+            android:padding="@dimen/padding_8dp"
             android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
