--- a/app/src/main/res/layout/fragment_actor_info.xml
+++ b/app/src/main/res/layout/fragment_actor_info.xml
@@ -12,9 +12,9 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/actorPhotoImageView"
-            android:layout_width="140dp"
-            android:layout_height="200dp"
-            android:layout_margin="4dp"
+            android:layout_width="@dimen/actor_pic_width"
+            android:layout_height="@dimen/actor_pic_height"
+            android:layout_margin="@dimen/margin_4dp"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
             android:id="@+id/actorBirthDatTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/margin_4dp"
             android:text="@string/date_of_birth"
             android:textColor="@color/white"
             app:layout_constraintStart_toEndOf="@+id/actorPhotoImageView"
@@ -78,8 +78,8 @@
             android:id="@+id/actorBioTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/padding_8dp"
             android:layout_margin="@dimen/margin_8dp"
+            android:padding="@dimen/padding_8dp"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -89,7 +89,7 @@
         <View
             android:id="@+id/viewAfterBio"
             android:layout_width="wrap_content"
-            android:layout_height="1dp"
+            android:layout_height="@dimen/view_height_1dp"
             android:layout_margin="@dimen/margin_4dp"
             android:background="@color/bottom_nav_color"
             app:layout_constraintEnd_toEndOf="parent"
@@ -99,8 +99,8 @@
             android:id="@+id/actorKnownForMoviesTitleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/padding_8dp"
             android:layout_margin="@dimen/margin_8dp"
+            android:padding="@dimen/padding_8dp"
             android:text="@string/known_for_movies"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
@@ -122,7 +122,7 @@
         <View
             android:id="@+id/view"
             android:layout_width="wrap_content"
-            android:layout_height="1dp"
+            android:layout_height="@dimen/view_height_1dp"
             android:layout_margin="@dimen/margin_4dp"
             android:background="@color/bottom_nav_color"
             app:layout_constraintEnd_toEndOf="parent"
@@ -132,8 +132,8 @@
             android:id="@+id/actorAllRolesTitleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/padding_8dp"
             android:layout_margin="@dimen/margin_8dp"
+            android:padding="@dimen/padding_8dp"
             android:text="@string/all_films_title"
             android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
