--- a/app/src/main/res/layout/fragment_movie_info.xml
+++ b/app/src/main/res/layout/fragment_movie_info.xml
@@ -20,8 +20,8 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/smallMoviePosterImageView"
-            android:layout_width="100dp"
-            android:layout_height="150dp"
+            android:layout_width="@dimen/movie_info_poster_width"
+            android:layout_height="@dimen/movie_info_poster_height"
             android:layout_margin="@dimen/margin_8dp"
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toStartOf="@+id/guidelineVertical30"
@@ -66,7 +66,6 @@
             android:textSize="@dimen/text_size_title_info"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.125"
             app:layout_constraintStart_toStartOf="@+id/guidelineVertical30"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Killing Eve: Second Season" />
@@ -212,11 +211,11 @@
         <View
             android:id="@+id/viewAfterCast"
             android:layout_width="wrap_content"
-            android:layout_height="1dp"
+            android:layout_height="@dimen/view_height_1dp"
             android:background="@color/bottom_nav_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/castTitleTextView"/>
+            app:layout_constraintTop_toBottomOf="@id/castTitleTextView" />
 
         <ProgressBar
             android:id="@+id/movieInfoProgressBar"
