--- a/app/src/main/res/layout/item_movie_recycler_view.xml
+++ b/app/src/main/res/layout/item_movie_recycler_view.xml
@@ -18,8 +18,8 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/moviePosterImageView"
-            android:layout_width="140dp"
-            android:layout_height="200dp"
+            android:layout_width="@dimen/item_movie_pic_width"
+            android:layout_height="@dimen/item_movie_pic_height"
             android:adjustViewBounds="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
             android:minLines="2"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="18sp"
+            android:textSize="@dimen/item_movie_title_text_size"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/moviePosterImageView"
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:textSize="16sp"
+            android:textSize="@dimen/item_movie_date_text_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/titleMovieTextView"
@@ -55,7 +55,7 @@
             android:id="@+id/movieRatingTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="@dimen/margin_4dp"
             android:background="@drawable/rounded_shape"
             android:padding="@dimen/padding_4dp"
             android:textColor="@color/white"
