--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,26 @@
     <dimen name="padding_8dp">8dp</dimen>
     <dimen name="padding_4dp">4dp</dimen>
     <dimen name="margin_4dp">4dp</dimen>
+    <dimen name="view_height_1dp">1dp</dimen>
+    <dimen name="actor_pic_width">140dp</dimen>
+    <dimen name="actor_pic_height">200dp</dimen>
+    <dimen name="movie_info_poster_width">100dp</dimen>
+    <dimen name="movie_info_poster_height">150dp</dimen>
+    <dimen name="search_view_elevation">8dp</dimen>
+    <dimen name="margin_16dp">16dp</dimen>
+    <dimen name="cast_item_text_size">12sp</dimen>
+    <dimen name="item_know_for_width">130dp</dimen>
+    <dimen name="item_know_for_height">180dp</dimen>
+    <dimen name="item_actors_name_text_size">16sp</dimen>
+    <dimen name="item_actors_pic_width">100dp</dimen>
+    <dimen name="item_actors_pic_height">140dp</dimen>
+    <dimen name="item_movie_date_text_size">16sp</dimen>
+    <dimen name="item_movie_title_text_size">18sp</dimen>
+    <dimen name="item_movie_pic_width">140dp</dimen>
+    <dimen name="item_movie_pic_height">200dp</dimen>
+    <dimen name="item_in_theatre_pic_width">140dp</dimen>
+    <dimen name="item_in_theatre_pic_height">200dp</dimen>
+    <dimen name="item_saved_title_text_size">14sp</dimen>
+    <dimen name="item_saved_pic_width">140dp</dimen>
+    <dimen name="item_saved_pic_height">200dp</dimen>
 </resources>
