--- a/app/src/main/res/layout/item_saved_movie.xml
+++ b/app/src/main/res/layout/item_saved_movie.xml
@@ -18,22 +18,16 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/moviePosterImageView"
-            android:layout_width="@dimen/item_saved_pic_width"
-            android:layout_height="@dimen/item_saved_pic_height"
-            android:adjustViewBounds="true"
+            style="@style/MoviePoster140x200Style"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/killing_eve_example" />
 
         <TextView
             android:id="@+id/titleMovieTextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/MovieItemStyleTitle"
             android:padding="@dimen/padding_4dp"
-            android:textAlignment="center"
-            android:textColor="@color/white"
             android:textSize="@dimen/item_saved_title_text_size"
-            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/moviePosterImageView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/moviePosterImageView"
@@ -41,12 +35,7 @@
 
         <TextView
             android:id="@+id/movieRatingTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_8dp"
-            android:background="@drawable/rounded_shape"
-            android:padding="@dimen/padding_8dp"
-            android:textColor="@color/white"
+            style="@style/MovieItemStyleRating"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:backgroundTint="@color/black"
