--- a/app/src/main/res/layout/fragment_movie_info.xml
+++ b/app/src/main/res/layout/fragment_movie_info.xml
@@ -210,9 +210,7 @@
 
         <View
             android:id="@+id/viewAfterCast"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/view_height_1dp"
-            android:background="@color/bottom_nav_color"
+            style="@style/ViewDividerStyle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/castTitleTextView" />
