--- a/app/src/main/res/layout/fragment_saved_movies_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_saved_movies_recycler_view.xml
@@ -8,12 +8,10 @@
 
     <TextView
         android:id="@+id/titleSavedMoviesTextView"
+        style="@style/StyleTextTitleForRecyclerViewGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_8dp"
-        android:padding="@dimen/padding_8dp"
         android:text="@string/my_saved_movies"
-        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,9 +19,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/savedMovieListRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/margin_8dp"
+        android:layout_height="0dp"
+        android:layout_margin="@dimen/margin_4dp"
         app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleSavedMoviesTextView"
