--- a/app/src/main/res/layout/item_movie_recycler_view.xml
+++ b/app/src/main/res/layout/item_movie_recycler_view.xml
@@ -18,9 +18,7 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/moviePosterImageView"
-            android:layout_width="@dimen/item_movie_pic_width"
-            android:layout_height="@dimen/item_movie_pic_height"
-            android:adjustViewBounds="true"
+            style="@style/MoviePoster140x200Style"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -28,13 +26,7 @@
 
         <TextView
             android:id="@+id/titleMovieTextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:minLines="2"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="@dimen/item_movie_title_text_size"
-            android:textStyle="bold"
+            style="@style/MovieItemStyleTitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/moviePosterImageView"
             app:layout_constraintTop_toBottomOf="@+id/moviePosterImageView"
@@ -42,10 +34,7 @@
 
         <TextView
             android:id="@+id/dateOfReleaseTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="@dimen/item_movie_date_text_size"
+            style="@style/MovieItemStyleYear"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/titleMovieTextView"
@@ -53,15 +42,9 @@
 
         <TextView
             android:id="@+id/movieRatingTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_4dp"
-            android:background="@drawable/rounded_shape"
-            android:padding="@dimen/padding_4dp"
-            android:textColor="@color/white"
+            style="@style/MovieItemStyleRating"
             app:layout_constraintBottom_toBottomOf="@+id/moviePosterImageView"
             app:layout_constraintStart_toStartOf="parent"
-            tools:backgroundTint="@color/black"
             tools:text="4.5" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
