--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="background_dark">#171414</color>
     <color name="red_surface">#E50914</color>
     <color name="bottom_nav_color">#1B958F8F</color>
+    <color name="bottom_nav_ripple">#A1F6F4F4</color>
 </resources>
