--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -42,4 +42,5 @@
     <dimen name="item_saved_title_text_size">14sp</dimen>
     <dimen name="item_saved_pic_width">140dp</dimen>
     <dimen name="item_saved_pic_height">200dp</dimen>
+    <dimen name="item_movie_year_text_size">12sp</dimen>
 </resources>
