--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -111,7 +111,8 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">@dimen/text_size_title</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">@dimen/item_movie_title_text_size</item>
         <item name="android:textStyle">bold</item>
     </style>
 
@@ -119,6 +120,8 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">@dimen/item_movie_year_text_size</item>
     </style>
 
     //Search result
