change item in search layout

--- a/app/src/main/res/layout/item_search_result_recycler_view.xml
+++ b/app/src/main/res/layout/item_search_result_recycler_view.xml
@@ -26,7 +26,7 @@
 
         <TextView
             android:id="@+id/resultTitleTextView"
-            style="@style/SearchResultTitle"
+            style="@style/SearchResultTitleStyle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/resultPosterImageView"
@@ -37,6 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/resultTitleTextView"
