--- a/app/src/main/res/drawable/progress_animation.xml
+++ b/app/src/main/res/drawable/progress_animation.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:gravity="center">
         <animated-rotate xmlns:android="http://schemas.android.com/apk/res/android"
-            android:drawable="@drawable/progress_image"
+            android:drawable="@drawable/progress_dots"
             android:pivotX="50%"
             android:pivotY="50%" />
     </item>
